# gst-plugins-bad

./: configure.ac
ext/wayland/: Makefile.am  gstwaylandsink.c  gstwaylandsink.h  wldisplay.c  wldisplay.h  wldrm.c  wldrm.h  wlvideoformat.c  wlwindow.c
gst-libs/gst/: Makefile.am
gst-libs/gst/drm/: Makefile.am  gstdrmallocator.c
pkgconfig/: Makefile.am  gstreamer-drm-uninstalled.pc.in  gstreamer-drm.pc.in
